<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="memory.Memory">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSelectDifficulty"
        android:text="@string/memory_select_difficulty"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="?attr/buttonColor"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSelectDifficulty"
        android:layout_marginTop="10dp"
        android:id="@+id/difficultySelection"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_easy"
            android:textSize="15sp"
            android:buttonTint="@color/purple_500">
        </RadioButton>

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_medium"
            android:textSize="15sp"
            android:buttonTint="@color/purple_500">
        </RadioButton>

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_hard"
            android:textSize="15sp"
            android:buttonTint="@color/purple_500">
        </RadioButton>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/memory_start"
        android:id="@+id/btnStart"
        android:layout_marginTop="20dp"
        android:layout_below="@id/difficultySelection"
        android:textColor="@color/white"
        android:backgroundTint="?attr/buttonColor"
        tools:ignore="NotSibling" />

</RelativeLayout>