<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="learning_sets.EditSet" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_name"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:id="@+id/set_name_editxt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/finish_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_some_terms"
        android:textSize="17sp"
        android:layout_below="@+id/set_name_editxt"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/add_some_terms_txt"/>

</RelativeLayout>
