<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_description">

        <TextView
            android:id="@+id/set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_name_dummy"
            android:layout_marginTop="7dp"
            android:textSize="20sp"
            android:textColor="?attr/buttonColor"/>

        <TextView
            android:id="@+id/set_items_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_name"
            android:text="@string/set_terms_number_dummy"
            android:layout_marginTop="7dp"
            android:textSize="12sp"
            android:textColor="?attr/buttonColor"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginStart="10dp"/>

</LinearLayout>