<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="flashcards.Flashcards">

    <androidx.cardview.widget.CardView
        android:id="@+id/flashcard"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        tools:context="flashcards.Flashcards">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/termOrDefTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/flashcard_example_txt"
                android:textColor="?attr/buttonColor"
                android:textSize="20sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flashcard_progress_number"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:id="@+id/progressNumberTxt"
        android:layout_below="@+id/flashcard"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flashcardsButtonsLayout"
        android:layout_below="@+id/progressNumberTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btnPrevFlashcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_caps"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/btnNextFlashcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_caps"/>

    </LinearLayout>

</RelativeLayout>