<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="learning_sets.CreateOwnTermSets" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_own_sets_welcome"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/create_own_sets_welcome_txt" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_own_sets_welcome_txt"
        android:id="@+id/next_btn_and_txt">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:padding="5dp"
                android:layout_marginStart="15dp"
                android:id="@+id/new_set_btn"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_set"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/new_set_txt"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="new set name"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/new_set_name_edit"
                    android:visibility="gone"/>
            </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_sets"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/next_btn_and_txt"
        android:id="@+id/sets_number_txt" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/sets_recycler_view"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/sets_number_txt"/>

</RelativeLayout>
