<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FlashcardsOptions">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFlashcardsSettings"
        android:text="@string/flashcards_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFlashcardsSettings"
        android:layout_marginTop="10dp"
        android:id="@+id/termDefinitionChoice"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/defToTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_to_term"
            android:textSize="15sp"
            android:buttonTint="@color/purple_500">
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termToDef"
            android:text="@string/term_to_def"
            android:textSize="15sp"
            android:buttonTint="@color/purple_500">
        </RadioButton>

    </RadioGroup>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/termDefinitionChoice"
        android:text="OK"
        android:id="@+id/btnFlashcards"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"
        />

</RelativeLayout>
